# chorus

./: .gitignore  CHANGELOG.md  CHERRY_STUDIO.md  CHORUS_FIX_REPORT.md  Cargo.toml  FIXED_CONFIG_ISSUE.md  FIX_SUMMARY.md  KLEIN_BOTTLE_README.md  LICENSE_  PROJECT_IMPROVEMENT_ANALYSIS.md  PROJECT_REWRITE_PROMPT.md  README.md  TEMPERATURE_CONFIG.md  check_klein_bottle.sh  config-example.toml  config-fixed.toml  config-json-format-example.toml  ed -n 100,340p  klein-bottle-config.toml  klein-bottle-demo.toml  mock_iflow.py  run_klein_bottle.sh  test-config.toml  test-old-config.toml  test_api.sh  test_chorus.py  test_chorus_urllib.py  test_klein_bottle_ci.sh  test_migration.sh  test_stream.sh  test_streaming.sh
.github/workflows/: auto-idea-codex-loop.yml  auto-merge-cto-new.yml  idea-loop.yml
.qoder/: settings.json
examples/: config-json-format.toml  config.toml  test-old-config.toml
results/: ideas.json
scripts/: generate_idea.py  generate_idea.sh  judge_and_prune.py  judge_and_prune.sh  run_cycle.py  run_loop.py  run_loop.sh  test_api.sh  test_migration.sh  test_stream.sh  update_results.py  update_results.sh
src/: config.rs  config_final.rs  config_new.rs  config_tests.rs  error.rs  klein_bottle.rs  lib.rs  llm.rs  main.rs  server.rs  test_migration.rs  workflow.rs  workflow_new.rs
