[package]
name = "chorus"
version = "1.2.0"
edition = "2021"

[lib]
name = "chorus"
path = "src/lib.rs"

[[bin]]
name = "chorus"
path = "src/bin/chorus.rs"

[[bin]]
name = "klein_bottle"
path = "src/bin/klein_bottle.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-recursion = "1.0"
bytes = "1.5"
chrono = "0.4"
url = "2.4"
clap = { version = "4.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
toml = "0.8"
